Add reconfigurations for stress testing

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>FEC AirBnB Description</title>
+        <title>Latitude Description Component</title>
     </head>
     <body>
         <div id="description"></div>
